--- a/SCSS/input.scss
+++ b/SCSS/input.scss
@@ -1,4 +1,3 @@
-// font-family: 'Rubik', sans-serif;
 /* PRIMARY COLORS */
 $primary_blue: #5847eb;
 $primary_work: #ff8c66;
@@ -13,22 +12,60 @@ $neutral_darkBlue: #1c1f4a;
 $neutral_desatBlue: #6f76c8;
 $neutral_paleBlue: #bdc1ff;
 /* MIXINS */
+
+/* FONT-SIZES */
+
+h1 {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #FFF;
+}
+
+h2 {
+  font-weight: 300;
+  color: #FFF;
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-weight: 300;
+  font-size: 1.2rem;
+  padding: 0 7% 0 9%;
+  color: $neutral_desatBlue;
+}
+
+h4 {
+  font-size: 1.1rem;
+  color: #FFF;
+}
+
+p {
+  font-size: 0.9rem;
+  font-weight: 300;
+}
+
+/** CUSTOM CSS**/
+
 :root {
   background-color: $neutral_darkestBlue;
-  font-size: 18px;
-  color: $neutral_desatBlue;
   padding: 0;
   margin: 0;
 
   body {
     background-color: transparent;
+    font-family: 'Rubik', sans-serif;
+    color: $neutral_paleBlue;
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.5;
 
     .container {
-      padding-top: 20%;
+      padding-top: 18%;
 
       .row {
         .main-nav {
-          padding: 14px;
+          padding: 10px;
+          display: flex;
 
           .views {
             width: 325px;
@@ -46,11 +83,66 @@ $neutral_paleBlue: #bdc1ff;
             background-color: $primary_blue;
             margin: 0 auto;
             position: absolute;
+            display: inline-flex;
+
+            .profile-pic {
+              width: 35%;
+              display: flex;
+              justify-content: center;
+
+              img {
+                width: 80%;
+                height: auto;
+                align-self: center;
+                padding: 12%;
+                --stroke-pos: 1px;
+                --stroke-neg: -1px;
+                --stroke-color: white;
+                filter: drop-shadow(var(--stroke-pos) 0 0 var(--stroke-color))
+                  drop-shadow(var(--stroke-neg) 0 var(--stroke-color))
+                  drop-shadow(0 var(--stroke-pos) 0 var(--stroke-color))
+                  drop-shadow(0 var(--stroke-neg) 0 var(--stroke-color))
+                  drop-shadow(var(--stroke-pos) var(--stroke-pos) 0 var(--stroke-color))
+                  drop-shadow(var(--stroke-pos) var(--stroke-neg) 0 var(--stroke-color))
+                  drop-shadow(var(--stroke-neg) var(--stroke-pos) 0 var(--stroke-color))
+                  drop-shadow(var(--stroke-neg) var(--stroke-neg) 0 var(--stroke-color));
+
+              }
+            }
+
+            .profile-text {
+              width: 65%;
+
+              p {
+                padding: 20% 0 0;
+                margin: 0;
+                font-weight: 400;
+              }
+
+              h2 {
+                margin: 0;
+                padding: 1% 0 0;
+              }
+            }
           }
+
+          .change-view {
+            position: absolute;
+            width: 100%;
+            bottom: 6%;
+            display: inline-flex;
+            padding: 0 2 0 0%;
+            justify-content: center;
+
+            h3 {
+              padding: 0 7% 0 9%;
+            }
+          }
+
         }
 
         .tracker {
-          padding: 10px;
+          padding: 3.5%;
 
           .tracker-header {
             width: 325px;
@@ -60,6 +152,13 @@ $neutral_paleBlue: #bdc1ff;
             margin: 0 auto;
             z-index: -1;
             position: relative;
+            overflow: hidden;
+
+            .tracker-icon {
+              position: absolute;
+              right: 16px;
+              top: -12px;
+            }
 
             .tracker-body {
               position: absolute;
@@ -70,6 +169,33 @@ $neutral_paleBlue: #bdc1ff;
               border-radius: 15px;
               margin: 0 auto;
               z-index: 1;
+              display: flex;
+
+              .current {
+
+                h4 {
+
+                }
+
+                h1 {
+                  
+                }
+
+                width: 40%;
+
+              }
+
+              .previous {
+                width: 60%;
+
+                p {
+                  color: $neutral_paleBlue;
+                }
+
+              }
+
+
+
             }
           }
 
