--- a/SCSS/input.scss
+++ b/SCSS/input.scss
@@ -12,9 +12,7 @@ $neutral_darkBlue: #1c1f4a;
 $neutral_desatBlue: #6f76c8;
 $neutral_paleBlue: #bdc1ff;
 /* MIXINS */
-
 /* FONT-SIZES */
-
 h1 {
   font-size: 2rem;
   font-weight: 300;
@@ -30,7 +28,6 @@ h2 {
 h3 {
   font-weight: 300;
   font-size: 1.2rem;
-  padding: 0 7% 0 9%;
   color: $neutral_desatBlue;
 }
 
@@ -42,10 +39,9 @@ h4 {
 p {
   font-size: 0.9rem;
   font-weight: 300;
+  letter-spacing: 0.5px;
 }
-
 /** CUSTOM CSS**/
-
 :root {
   background-color: $neutral_darkestBlue;
   padding: 0;
@@ -64,11 +60,11 @@ p {
 
       .row {
         .main-nav {
-          padding: 10px;
+          padding: 0;
           display: flex;
 
           .views {
-            width: 325px;
+            min-width: 325px;
             height: 200px;
             border-radius: 15px;
             background-color: $neutral_darkBlue;
@@ -98,15 +94,7 @@ p {
                 --stroke-pos: 1px;
                 --stroke-neg: -1px;
                 --stroke-color: white;
-                filter: drop-shadow(var(--stroke-pos) 0 0 var(--stroke-color))
-                  drop-shadow(var(--stroke-neg) 0 var(--stroke-color))
-                  drop-shadow(0 var(--stroke-pos) 0 var(--stroke-color))
-                  drop-shadow(0 var(--stroke-neg) 0 var(--stroke-color))
-                  drop-shadow(var(--stroke-pos) var(--stroke-pos) 0 var(--stroke-color))
-                  drop-shadow(var(--stroke-pos) var(--stroke-neg) 0 var(--stroke-color))
-                  drop-shadow(var(--stroke-neg) var(--stroke-pos) 0 var(--stroke-color))
-                  drop-shadow(var(--stroke-neg) var(--stroke-neg) 0 var(--stroke-color));
-
+                filter: drop-shadow(var(--stroke-pos) 0 0 var(--stroke-color)) drop-shadow(var(--stroke-neg) 0 var(--stroke-color)) drop-shadow(0 var(--stroke-pos) 0 var(--stroke-color)) drop-shadow(0 var(--stroke-neg) 0 var(--stroke-color)) drop-shadow(var(--stroke-pos) var(--stroke-pos) 0 var(--stroke-color)) drop-shadow(var(--stroke-pos) var(--stroke-neg) 0 var(--stroke-color)) drop-shadow(var(--stroke-neg) var(--stroke-pos) 0 var(--stroke-color)) drop-shadow(var(--stroke-neg) var(--stroke-neg) 0 var(--stroke-color));
               }
             }
 
@@ -131,14 +119,13 @@ p {
             width: 100%;
             bottom: 6%;
             display: inline-flex;
-            padding: 0 2 0 0%;
+            padding: 0 2%;
             justify-content: center;
 
             h3 {
               padding: 0 7% 0 9%;
             }
           }
-
         }
 
         .tracker {
@@ -157,7 +144,6 @@ p {
             .tracker-icon {
               position: absolute;
               right: 16px;
-              top: -12px;
             }
 
             .tracker-body {
@@ -169,59 +155,280 @@ p {
               border-radius: 15px;
               margin: 0 auto;
               z-index: 1;
-              display: flex;
+
 
               .current {
+                padding: 9% 7% 0;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
 
-                h4 {
+                h4 {}
+
+                .ellipsis {
+                  align-self: center;
+                  padding-bottom: 3%;
 
                 }
-
-                h1 {
-                  
-                }
-
-                width: 40%;
 
               }
 
               .previous {
-                width: 60%;
+                padding: 0 7%;
+                width: 100%;
+                text-align: center;
+                display: flex;
+                justify-content: space-between;
+
+
+                h1 {}
 
                 p {
                   color: $neutral_paleBlue;
+                  padding-top: 3%;
+
                 }
-
               }
-
-
-
             }
           }
 
           #work {
             background-color: $primary_work;
+
+            .tracker-icon {
+              top: -12px;
+            }
           }
 
           #play {
             background-color: $primary_play;
+
+            .tracker-icon {
+              top: -5px;
+            }
           }
 
           #study {
             background-color: $primary_study;
+
+            .tracker-icon {
+              top: -5px;
+            }
           }
 
           #exercise {
             background-color: $primary_exercise;
-          }
 
-          #self-care {
-            background-color: $primary_selfCare;
+            .tracker-icon {
+              top: -2px;
+            }
           }
 
           #social {
             background-color: $primary_social;
+
+            .tracker-icon {
+              top: -15px;
+            }
           }
+
+          #self-care {
+            background-color: $primary_selfCare;
+
+            .tracker-icon {
+              top: -10px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+/* MEDIA QUERIES */
+
+@media only screen and (min-width: 768px) {
+
+  :root {
+    body {
+      .container {
+        margin: 0;
+        max-width: 1440px;
+
+        .row {
+          width: 100%;
+          padding: 0 8%;
+          margin: 0;
+
+          .main-nav {
+            padding: 0 0 0 0;
+            justify-content: flex-end;
+
+            .views {
+              min-width: 255px;
+              min-height: 518px;
+              margin: 0;
+            }
+
+            .profile {
+              width: 255px;
+              height: 354px;
+              flex-direction: column;
+
+              .profile-pic {
+                width: 100%;
+                justify-content: left;
+                padding: 14% 0 0 14%;
+
+                img {
+                  width: 36%;
+                  padding: 0;
+                }
+              }
+
+              .profile-text {
+                width: 100%;
+                padding: 16% 0 0 14%;
+
+                p {
+                  padding: 0 0 0;
+                  margin: 0;
+                }
+
+                h2 {
+                  font-size: 2.5rem;
+                }
+              }
+            }
+
+            .change-view {
+              position: absolute;
+              width: 100%;
+              bottom: 6%;
+              display: flex;
+              padding: 0 0 0 12%;
+              justify-content: space-evenly;
+              flex-direction: column;
+
+              h3 {
+                padding: 3.5% 0 0 0;
+              }
+            }
+          }
+
+          .all-trackers {
+
+            .row {
+
+              padding: 0;
+
+              .tracker {
+                  padding: 0 10px 4% 10px;
+
+                .tracker-header {
+                  width: 255px;
+                  height: 244px;
+
+                  .tracker-icon {
+                    position: absolute;
+                    right: 16px;
+                  }
+
+                  .tracker-body {
+                    width: 255px;
+                    height: 198px;
+
+                    .current {
+                      padding: 11% 12% 0;
+                      display: flex;
+                      flex-direction: row;
+                      justify-content: space-between;
+
+                      h4 {}
+
+                      .ellipsis {
+                        align-self: center;
+                        padding-bottom: 3%;
+
+                      }
+
+                    }
+
+                    .previous {
+                      padding: 0 7%;
+                      width: 100%;
+                      text-align: left;
+                      display: flex;
+                      flex-direction: column;
+                      justify-content: flex-end;
+
+
+                      h1 {
+                        font-size: 3.5rem;
+                        padding: 8% 5% 0;
+                        margin: 0;
+                      }
+
+                      p {
+                        color: $neutral_paleBlue;
+                        padding: 3% 5% 0;
+                      }
+                    }
+                  }
+                }
+
+                #work {
+                  background-color: $primary_work;
+
+                  .tracker-icon {
+                    top: -12px;
+                  }
+                }
+
+                #play {
+                  background-color: $primary_play;
+
+                  .tracker-icon {
+                    top: -5px;
+                  }
+                }
+
+                #study {
+                  background-color: $primary_study;
+
+                  .tracker-icon {
+                    top: -5px;
+                  }
+                }
+
+                #exercise {
+                  background-color: $primary_exercise;
+
+                  .tracker-icon {
+                    top: -2px;
+                  }
+                }
+
+                #social {
+                  background-color: $primary_social;
+
+                  .tracker-icon {
+                    top: -15px;
+                  }
+                }
+
+                #self-care {
+                  background-color: $primary_selfCare;
+
+                  .tracker-icon {
+                    top: -10px;
+                  }
+                }
+              }
+
+            }
+          }
+
+
         }
       }
     }
