--- a/SCSS/styles.css
+++ b/SCSS/styles.css
@@ -193,7 +193,7 @@ p {
 }
 
 /* MEDIA QUERIES */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 600px) {
   :root body .container {
     margin: 0;
     max-width: 1440px;
@@ -204,8 +204,9 @@ p {
     margin: 0;
   }
   :root body .container .row .main-nav {
-    padding: 0 0 0 0;
+    padding: 0;
     justify-content: flex-end;
+    width: 48%;
   }
   :root body .container .row .main-nav .views {
     min-width: 255px;
@@ -231,7 +232,7 @@ p {
     padding: 16% 0 0 14%;
   }
   :root body .container .row .main-nav .profile .profile-text p {
-    padding: 0 0 0;
+    padding: 0;
     margin: 0;
   }
   :root body .container .row .main-nav .profile .profile-text h2 {
@@ -247,13 +248,16 @@ p {
     flex-direction: column;
   }
   :root body .container .row .main-nav .change-view h3 {
-    padding: 3.5% 0 0 0;
+    padding: 3.5% 0 0;
+  }
+  :root body .container .row .all-trackers {
+    width: 50%;
   }
   :root body .container .row .all-trackers .row {
     padding: 0;
   }
   :root body .container .row .all-trackers .row .tracker {
-    padding: 0 10px 4% 10px;
+    padding: 0 10px 4%;
   }
   :root body .container .row .all-trackers .row .tracker .tracker-header {
     width: 255px;
@@ -329,6 +333,40 @@ p {
   }
   :root body .container .row .all-trackers .row .tracker #self-care .tracker-icon {
     top: -10px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  :root body .container .row .main-nav {
+    max-width: 60%;
+    flex: 0 0 48%;
+  }
+  :root body .container .row .all-trackers {
+    max-width: 50%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  :root body .container .row .main-nav {
+    max-width: 25%;
+    flex: 0 0 10%;
+  }
+  :root body .container .row .all-trackers {
+    max-width: 80%;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  :root body .container .row {
+    padding: 0 8%;
+    justify-content: flex-center;
+  }
+  :root body .container .row .main-nav {
+    max-width: 30%;
+    flex: 0 0 10%;
+  }
+  :root body .container .row .all-trackers {
+    max-width: 80%;
+  }
+  :root body .container .row .all-trackers .row .tracker {
+    flex-grow: 0;
   }
 }
 
